feat: harden password authentication (#21)
